# dies

./: .gitignore  CMakeLists.txt  README.md
examples/: verticalcalendary.cpp
old/: dies.cpp  dies.h  main.cpp
src/: dies.hpp  main.cpp
src/calen/: calen.hpp  calenday.hpp  calenmonth.hpp
src/calen/src/: calen.cpp  calenday.cpp  calenmonth.cpp
src/dies/: date.hpp  drand.hpp
src/dies/src/: date.cpp  drand.cpp
test/: main.cpp
